[#62] Adjusted font sizes to prevent weird text wrapping in locations block

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,8 +76,8 @@
   --body-font-size-l: 20px;
   --body-font-size-lh: 1;
   --body-font-size-m: 18px;
-  --body-font-size-s: clamp(16px, 2.4vw, 18px);
-  --body-font-size-xs: clamp(14px, 2.2vw, 16px);
+  --body-font-size-s: 16px;
+  --body-font-size-xs: 14px;
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
@@ -211,8 +211,8 @@
 
     /* body */
     --body-font-size-l: 22px;
-    --body-font-size-m: clamp(18px, 1.4vw, 20px);
-    --body-font-size-s: 18px;
+    --body-font-size-m: 19px;
+    --body-font-size-s: 17px;
     --body-font-size-xs: 16px;
 
     /* nav */
